@@ -5955,3 +5955,5 @@ v0.92.0.11:
   - es-419.yml updated couresty of EuGNosii with PR #4848.
   - Fix plot notifications not showing information when you've left a plotgroup into a non-plotgroup townblock.
     - Closes #4856.
+  - API: Added ResidentPreJailEvent, a Cancellable event.
+    - Closes #4862.
